# polymarket-copy

./: .gitignore  Cargo.toml  README.md
src/: backtest.rs  bot.rs  main.rs
src/api/: clob_client.rs  data_client.rs  mod.rs  types.rs
src/db/: mod.rs
src/metrics/: calculator.rs  mod.rs
src/models/: market.rs  metrics.rs  mod.rs  position.rs  trade.rs  trader.rs
src/trading/: config.rs  copy_engine.rs  mod.rs  position_sizer.rs  strategy.rs
