[package]
name = "polymarket_copier"
version = "0.1.0"
edition = "2021"
description = "A Polymarket copy-trading bot that mimics high-value traders with intelligent position sizing"
license = "MIT"
repository = "https://github.com/🎢/polymarket-copy"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Async utilities
futures = "0.3"

# Math/Statistics for metrics
statrs = "0.18"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Database (SQLite for simplicity)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "derive"] }

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Decimal arithmetic for financial calculations
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.36"

# Ethereum signing for CLOB orders
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-signer = "0.6"
alloy-signer-local = "0.6"

# Hex encoding
hex = "0.4"

# UUID for order IDs and nonces
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
